style(comparativo): fix spacings and font weight

--- a/src/components/ComparativoColchoes/TableFixedHeader/TableFixedHeader.module.scss
+++ b/src/components/ComparativoColchoes/TableFixedHeader/TableFixedHeader.module.scss
@@ -12,6 +12,10 @@
     transform: translateY(0);
   }
 
+  table tbody tr td {
+    padding-inline: 0;
+  }
+
   p {
     display: flex;
     align-items: center;
@@ -21,16 +25,15 @@
     font-size: 30px;
     font-weight: 700;
     text-transform: uppercase;
+    letter-spacing: 0.05em;
 
     span {
       display: flex;
       align-items: center;
       justify-content: center;
-      font-family: ZonaProLight;
       font-size: 13px;
       width: 120px;
       height: 33px;
-      letter-spacing: 1.2px;
       color: #fff;
       background-image: linear-gradient(to right, #F48580, #fff);
       border-radius: 33px;
